# image-to-question

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.render  README.md  backlog.txt  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test.db  test.py
migrations/: env.py
migrations/versions/: 248ad8b8d52c_add_class_for_and_subject_fields.py  db1dc4fbb266_rename_class_for_to_class_id.py  ed96411c8d70_add_choices_and_rationale_to_questions.py  fe38474cceef_add_class_for_and_subject_to_questions.py
ocr-tools/: __init__.py  analyze_actual_ocr.py  ocr_error_analyzer.py  ocr_improvement_comparison.py
routers/: generate.py  questions.py  upload.py  upload_and_generate.py
services/: diagram_utils.py  ocr_service.py  pdf_service.py  professional_book_editor.py  qgen_service.py  ultimate_ocr_service.py  vision_service.py
tests/: __init__.py  demo_ultimate_improvements.py  final_formatting_test.py  final_ocr_comparison.py  final_title_test.py  test.py  test_advanced_ocr.py  test_advanced_ocr_detailed.py  test_book_editor.py  test_conservative_correction.py  test_full_pipeline.py  test_integration.py  test_number_preservation.py  test_ocr_comparison.py  test_ocr_detailed.py  test_ocr_improvements_demo.py  test_paragraph_formatting.py  test_qgen.py  test_questions_endpoints.py  test_simple_ocr.py  test_title_separation.py  test_ultimate_ocr.py
unused-services/: adaptive_ocr_service.py  advanced_ocr_service.py  fast_ocr_service.py  optimized_ocr_service.py  paddle_ocr_service.py  simple_ocr_service.py
