[project]
name = "question-gen"
version = "0.1.0"
description = "Question Generation Backend with FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.95.2",
    "uvicorn[standard]>=0.21.1",
    "python-multipart>=0.0.6",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.11.1",
    "aiosqlite>=0.17.0",
    "asyncpg>=0.24.0", # For PostgreSQL
    "sqlalchemy-utils>=0.41.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "aiofiles>=23.1.0",
    "httpx>=0.24.1",
    "opencv-python-headless>=4.13.0.90",
    "groq>=1.0.0",
    "pymupdf>=1.26.7",
    "pdf2image>=1.17.0",
    "databases>=0.5.10",
    "psycopg2-binary>=2.9.7",
]
